# radare2

binr/r2agent/: Makefile  r2agent.c
binr/rabin2/: Makefile  rabin2.c
binr/radare2/: Makefile
binr/radiff2/: Makefile
binr/rafind2/: Makefile  meson.build
binr/ragg2/: Makefile
binr/rahash2/: Makefile  rahash2.c
binr/rarun2/: Makefile
binr/rasm2/: Makefile
binr/rax2/: Makefile
libr/: meson.build
libr/anal/: fcn.c  op.c
libr/core/: canal.c  cconfig.c  disasm.c  visual.c
libr/include/: r_anal.h  r_main.h
libr/include/r_util/: r_sys.h
libr/main/: Makefile  main.c  meson.build  r2agent.c  radare2.c  ragg2.c  rasm2.c
libr/util/: getopt.c
